# Rust_Kernel

./: README.md
rustkernelv1/: README.md  multiboot_header.asm
rustkernelv2/: Cargo.toml  README.md
rustkernelv2/.cargo/: config.toml
rustkernelv2/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
