[package]
name = "rustkernelv2"
version = "0.1.0"
authors = ["devedge <richard.pjski2@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.3.4"

[package.metadata.bootimage]
default-target = "x86_64-rustkernelv2.json"

# Abort on panic instead of stack unwinding
[profile.dev] # profile for cargo build
panic = "abort"

[profile.release] # profile for cargo build --release
panic = "abort"
