[package]
name = "rustkernelv2"
version = "0.1.0"
authors = ["devedge <richard.pjski2@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.5.1", features = ["map_physical_memory"]}
pc-keyboard = "0.3.1"
pic8259_simple = "0.1.1"
spin = "0.4.9"
uart_16550 = "0.1.0"
volatile = "0.2.3"
x86_64 = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"

[package.metadata.bootimage]
default-target = "x86_64-rustkernelv2.json"

# Abort on panic instead of stack unwinding
[profile.dev] # profile for cargo build
panic = "abort"

[profile.release] # profile for cargo build --release
panic = "abort"
